# spectrum-news-agent

./: .gitignore  .gitignore copy  Dockerfile  README.md  app.py  cloudbuild.yaml  config.yml  docker-compose.yml  pyproject.toml
src/: agent.py  agent_models.py  app_helpers.py  article_extractor.py  config.py  llm_service.py  llm_validation.py  logging_config.py  pipeline.py  report_compiler.py  schemas.py  sources.py
src/event_store/: __init__.py  base.py  models.py  null.py  postgres.py  sqlite.py
src/tools/: compile_report.py  extract_articles.py  search_news.py  summarize_articles.py
tests/: test_agent.py  test_agent_models.py  test_app.py  test_article_extractor.py  test_compile_report_tool.py  test_config.py  test_event_store.py  test_extract_articles_tool.py  test_llm_service.py  test_llm_validation.py  test_logging_config.py  test_pipeline.py  test_report_compiler.py  test_schemas.py  test_search_news_tool.py  test_sources.py  test_summarize_articles_tool.py
